<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorBg"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_text"
            android:textSize="24dp"
            />

    <LinearLayout
            android:id="@+id/true_false_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                    android:id="@+id/true_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_button"
            />


            <Button
                    android:id="@+id/false_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false_button"
            />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/fill_the_blank_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/check_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_button"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hint"

        />
    </LinearLayout>

   <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
       <Button
               android:id="@+id/cheat_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/cheat_button"/>

   </LinearLayout>

</LinearLayout>